# todo_example_fastapi

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
todo_example/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
todo_example/db/: base.py  utils.py
todo_example/db/dao/: base_dao.py  todo_dao.py  user_dao.py
todo_example/db/migrations/: env.py
todo_example/db/migrations/versions/: 2023-10-18-23-11_5d16bf4e74c2.py  2023-10-25-00-19_4a23e9d2b3e9.py
todo_example/db/models/: __init__.py  todo_model.py  user_model.py
todo_example/services/: __init__.py
todo_example/services/authentication/: auth.py  deps.py  hash_password.py  manager.py  security.py
todo_example/tests/: __init__.py
todo_example/utils/enums/: exceptions.py
todo_example/web/: __init__.py  application.py  lifetime.py
todo_example/web/api/: __init__.py  router.py
todo_example/web/api/monitoring/: __init__.py
todo_example/web/api/todo/: __init__.py  schema.py  views.py
todo_example/web/api/users/: __init__.py  schema.py  views.py
